cmake_minimum_required(VERSION 3.0.2)
project(pcap_to_rosbag)


find_package(catkin REQUIRED)

###################################
## catkin specific configuration ##
###################################
catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES pasco_to_rosbag
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)

